[package]
name = "rxprog"
version = "0.1.0"
description = "Programming utility for Renesas microcontrollers supporting the Boot Mode protocol"
keywords = ["renesas"]
categories = ["command-line-utilities"]
authors = ["The6P4C <watsonjcampbell@gmail.com>"]
repository = "https://github.com/the6p4c/rxprog-cli.git"
homepage = "https://github.com/the6p4c/rxprog-cli"
license = "GPLv3"
readme = "README.md"
edition = "2018"

[[bin]]
name = "rxprog-cli"
required-features = ["rxprog-cli"]

[features]
rxprog-cli = ["clap", "ihex", "srec"]

[dependencies]
serialport = "3.3.0"

# for rxprog-cli binary build only
clap = { version = "2.33.1", optional = true }
ihex = { version = "3.0.0", optional = true }
srec = { version = "0.1.2", optional = true }

[dev-dependencies]
mock-io = { git = "https://github.com/carllerche/mock-io", default-features = false, features = [] }
