[package]
name = "rxprog"
version = "1.0.2"
description = "Library implementing the Boot Mode protocol for specific Renesas microcontrollers and CLI for programming firmware images"
keywords = ["renesas"]
categories = ["command-line-utilities"]
authors = ["The6P4C <watsonjcampbell@gmail.com>"]
repository = "https://github.com/the6p4c/rxprog.git"
homepage = "https://github.com/the6p4c/rxprog"
license = "GPL-3.0-only"
readme = "README.md"
documentation = "https://docs.rs/rxprog"
edition = "2018"

[[bin]]
name = "rxprog-cli"
required-features = ["rxprog-cli"]

[features]
rxprog-cli = ["clap", "ihex", "srec"]

[dependencies]
serialport = "3.3.0"

# for rxprog-cli binary build only
clap = { version = "2.33.1", optional = true }
ihex = { version = "3.0.0", optional = true }
srec = { version = "0.2.0", optional = true }

[dev-dependencies]
mock-io = { git = "https://github.com/carllerche/mock-io", default-features = false, features = [] }
